--- a/src/CMS/Bundle/ContentBundle/Resources/views/Category/new.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Category/new.html.twig
@@ -1,65 +1,104 @@
 {% extends "::admin/base_admin.html.twig" %}
 
 {% block body %}
-    <div class="section-header">
-        <ol class="breadcrumb">
-            <li><a href="{{ path('admin_category') }}">Catégorie</a></li>
-            <li class="active">Edition</li>
-        </ol>
-    </div>
+<div class="section-header">
+    <ol class="breadcrumb">
+        <li><a href="{{ path('admin_category') }}">Catégorie</a></li>
+        <li class="active">{{ "cms.core.creation"|trans }}</li>
+    </ol>
+</div>
 
-    <div class="section-body contain-lg">
-        {{ form_start(form) }}
-        <div class="col-md-3 pull-right">
-            <div class="card">
-                <div class="header">
-                    <h4 class="title">Infos <a data-toggle="collapse" href="#collapseInfos" class="pull-right"><i
-                                    class="fa fa-angle-down"></i></a></h4>
-                    <div class="clearfix"></div>
+{% if not form.vars.valid %}
+    <div class="alert alert-callout alert-danger" role="alert">
+        {{ form_errors(form) }}
+    </div>
+{% endif %}
+
+<div class="section-body contain-lg">
+    <div class="nav-container">
+        <ul class="nav nav-icons" role="tablist">
+            <li class="active">
+                <a href="#infos" role="tab" data-toggle="tab">
+                    <i class="fa fa-info-circle"></i><br>
+                    Infos
+                </a>
+            </li>
+            <li>
+                <a href="#seo" role="tab" data-toggle="tab">
+                    <i class="fa fa-address-card-o"></i><br>
+                    SEO
+                </a>
+            </li>
+        </ul>
+    </div>
+    {{ form_start(form) }}
+    <div class="tab-content">
+        <div id="seo" class="tab-pane">
+            <div class="col-md-8 col-md-offset-2">
+                <div class="card">
+                    <div class="content">
+                        {{ form_row(form.metaValuesTemp) }}
+                        {{ form_row(form.submit_seo) }}
+                        <div class="clearfix"></div>
+                    </div>
                 </div>
-                <div class="content">
-                    <ul class="list-unstyled">
-                        <li>Date: {{ entity.created|date('d/m/Y H:i:s') }}</li>
-                        <li>{{ form_row(form.published) }}</li>
-                        <li>{{ form_row(form.parent) }}</li>
-                        <li>{{ form_row(form.ordre) }}</li>
-                    </ul>
-                </div>
-                <div class="footer"></div>
-            </div>
-            <div class="card">
-                <div class="header">
-                    <h4 class="title">{{ 'cms.content.languages'|trans }} <a data-toggle="collapse"
-                                                                             href="#collapseLanguage"
-                                                                             class="pull-right"><i
-                                    class="fa fa-angle-down"></i></a></h4>
-                    <div class="clearfix"></div>
-                </div>
-                <div id="collapseLanguage" class="content collapse in" aria-expanded="true">
-                    {{ form_row(form.language) }}
-                </div>
-                <div class="footer"></div>
-            </div>
-            <div class="card">
-                <div class="header">
-                    <h4 class="title">{{ 'cms.content.image'|trans }} <a data-toggle="collapse" href="#collapseImage"
-                                                                         class="pull-right"><i class="fa fa-angle-down"></i></a>
-                    </h4>
-                    <div class="clearfix"></div>
-                </div>
-                <div id="collapseImage" class="content collapse in"
-                     aria-expanded="true">{{ form_row(form.banner) }}</div>
-                <div class="footer"></div>
             </div>
         </div>
-        <div class="col-md-9">
-            <div class="card">
-                <div class="content">
-                    {{ form_rest(form) }}
-                    <div class="clearfix"></div>
+        <div id="infos" class="tab-pane active">
+
+            <div class="col-md-3 pull-right">
+                <div class="card">
+                    <div class="header">
+                        <h4 class="title">Infos <a data-toggle="collapse" href="#collapseInfos" class="pull-right"><i
+                                        class="fa fa-angle-down"></i></a></h4>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="content">
+                        <ul class="list-unstyled">
+                            <li>Date: {{ entity.created|date('d/m/Y H:i:s') }}</li>
+                            <li>{{ form_row(form.published) }}</li>
+                            <li>{{ form_row(form.parent) }}</li>
+                            <li>{{ form_row(form.ordre) }}</li>
+                        </ul>
+                    </div>
+                    <div class="footer"></div>
+                </div>
+                <div class="card">
+                    <div class="header">
+                        <h4 class="title">{{ 'cms.content.languages'|trans }} <a data-toggle="collapse"
+                                                                                 href="#collapseLanguage"
+                                                                                 class="pull-right"><i
+                                        class="fa fa-angle-down"></i></a></h4>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div id="collapseLanguage" class="content collapse in" aria-expanded="true">
+                        {{ form_row(form.language) }}
+                    </div>
+                    <div class="footer"></div>
+                </div>
+                <div class="card">
+                    <div class="header">
+                        <h4 class="title">{{ 'cms.content.image'|trans }} <a data-toggle="collapse"
+                                                                             href="#collapseImage"
+                                                                             class="pull-right"><i
+                                        class="fa fa-angle-down"></i></a>
+                        </h4>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div id="collapseImage" class="content collapse in"
+                         aria-expanded="true">{{ form_row(form.banner) }}</div>
+                    <div class="footer"></div>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="card">
+                    <div class="content">
+                        {{ form_rest(form) }}
+                        <div class="clearfix"></div>
+                    </div>
                 </div>
             </div>
         </div>
         {{ form_end(form) }}
     </div>
-{% endblock %}
+    {% endblock %}
