--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/edit.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/edit.html.twig
@@ -7,76 +7,113 @@
             <li class="active">Edition</li>
         </ol>
     </div>
-    {{ form_start(edit_form) }}
-    <div class="col-md-3 pull-right">
-        <div class="card">
-            <div class="header">
-                <h4 class="title">Infos <a data-toggle="collapse" href="#collapseInfos" class="pull-right"><i
-                                class="fa fa-angle-down"></i></a></h4>
-
-                <div class="clearfix"></div>
-            </div>
-            <div class="content collapse in" id="collapseInfos" aria-expanded="true">
-                <ul class="list-unstyled">
-                    <li>Author: {{ app.user }}</li>
-                    <li>Date: {{ entity.created|date('d/m/Y H:i:s') }}</li>
-                    <li><a href="{{  path('front_single', {'alias': entity.url}) }}" target="_blank">{{ 'cms.content.preview'|trans }}</a></li>
-                    <li>{{ form_row(edit_form.published) }}</li>
-                    <li>{{ form_row(edit_form.featured) }}</li>
-                </ul>
-            </div>
-            <div class="footer"></div>
-        </div>
-        <div class="card">
-            <div class="header">
-                <h4 class="title">Meta <a data-toggle="collapse" href="#collapseMetas" class="pull-right"><i
-                                class="fa fa-angle-down"></i></a></h4>
-            </div>
-            <div id="collapseMetas" class="content collapse in" aria-expanded="true">
-                {{ form_row(edit_form.metaValuesTemp) }}
-            </div>
-            <div class="footer"></div>
-        </div>
-        <div class="card">
-            <div class="header">
-                <h4 class="title">{{ 'cms.content.languages'|trans }} <a data-toggle="collapse" href="#collapseLanguage"
-                                                                         class="pull-right"><i
-                                class="fa fa-angle-down"></i></a></h4>
-                <div class="clearfix"></div>
-            </div>
-            <div id="collapseLanguage" class="content collapse in" aria-expanded="true">
-                {{ form_row(edit_form.language) }}
-            </div>
-            <div class="footer"></div>
-        </div>
-        <div class="card">
-            <div class="header">
-                <h4 class="title">{{ 'cms.content.categories'|trans }} <a data-toggle="collapse"
-                                                                          href="#collapseCategory" class="pull-right"><i
-                                class="fa fa-angle-down"></i></a></h4>
-                <div class="clearfix"></div>
-            </div>
-            <div id="collapseCategory" class="content collapse in" aria-expanded="true">
-                {{ form_row(edit_form.categories) }}
-            </div>
-            <div class="footer"></div>
-        </div>
-        <div class="card">
-            <div class="header">
-                <h4 class="title">{{ 'cms.content.image'|trans }} <a data-toggle="collapse" href="#collapseImage"
-                                                                     class="pull-right"><i class="fa fa-angle-down"></i></a>
-                </h4>
-                <div class="clearfix"></div>
-            </div>
-            <div id="collapseImage" class="content collapse in"
-                 aria-expanded="true">{{ form_row(edit_form.thumbnail) }}</div>
-            <div class="footer"></div>
-        </div>
+    <div class="nav-container">
+        <ul class="nav nav-icons" role="tablist">
+            <li class="active">
+                <a href="#infos" role="tab" data-toggle="tab">
+                    <i class="fa fa-info-circle"></i><br>
+                    Infos
+                </a>
+            </li>
+            <li>
+                <a href="#seo" role="tab" data-toggle="tab">
+                    <i class="fa fa-address-card-o"></i><br>
+                    SEO
+                </a>
+            </li>
+        </ul>
     </div>
-    <div class="col-md-9">
-        <div class="card">
-            <div class="content">{{ form_rest(edit_form) }}
-                <div class="clearfix"></div>
+
+    {{ form_start(edit_form) }}
+    <div class="tab-content">
+        <div id="seo" class="tab-pane">
+            <div class="col-md-8 col-md-offset-2">
+                <div class="card">
+                    <div class="content">
+                        {{ form_row(edit_form.metaValuesTemp) }}
+                        <div class="clearfix"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="infos" class="tab-pane active">
+            <div class="col-md-3 pull-right">
+                <div class="card">
+                    <div class="header">
+                        <h4 class="title">Infos <a data-toggle="collapse" href="#collapseInfos" class="pull-right"><i
+                                        class="fa fa-angle-down"></i></a></h4>
+
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="content collapse in" id="collapseInfos" aria-expanded="true">
+                        <ul class="list-unstyled">
+                            <li>Author: {{ app.user }}</li>
+                            <li>Date: {{ entity.created|date('d/m/Y H:i:s') }}</li>
+                            <li><a href="{{ path('front_single', {'alias': entity.url}) }}"
+                                   target="_blank">{{ 'cms.content.preview'|trans }}</a></li>
+                            <li>{{ form_row(edit_form.published) }}</li>
+                            <li>{{ form_row(edit_form.featured) }}</li>
+                        </ul>
+                    </div>
+                    <div class="footer"></div>
+                </div>
+                <div class="card">
+                    <div class="header">
+                        <h4 class="title">Meta <a data-toggle="collapse" href="#collapseMetas" class="pull-right"><i
+                                        class="fa fa-angle-down"></i></a></h4>
+                    </div>
+                    <div id="collapseMetas" class="content collapse in" aria-expanded="true">
+                        {{ form_row(edit_form.metaValuesTemp) }}
+                    </div>
+                    <div class="footer"></div>
+                </div>
+                <div class="card">
+                    <div class="header">
+                        <h4 class="title">{{ 'cms.content.languages'|trans }} <a data-toggle="collapse"
+                                                                                 href="#collapseLanguage"
+                                                                                 class="pull-right"><i
+                                        class="fa fa-angle-down"></i></a></h4>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div id="collapseLanguage" class="content collapse in" aria-expanded="true">
+                        {{ form_row(edit_form.language) }}
+                    </div>
+                    <div class="footer"></div>
+                </div>
+                <div class="card">
+                    <div class="header">
+                        <h4 class="title">{{ 'cms.content.categories'|trans }} <a data-toggle="collapse"
+                                                                                  href="#collapseCategory"
+                                                                                  class="pull-right"><i
+                                        class="fa fa-angle-down"></i></a></h4>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div id="collapseCategory" class="content collapse in" aria-expanded="true">
+                        {{ form_row(edit_form.categories) }}
+                    </div>
+                    <div class="footer"></div>
+                </div>
+                <div class="card">
+                    <div class="header">
+                        <h4 class="title">{{ 'cms.content.image'|trans }} <a data-toggle="collapse"
+                                                                             href="#collapseImage"
+                                                                             class="pull-right"><i
+                                        class="fa fa-angle-down"></i></a>
+                        </h4>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div id="collapseImage" class="content collapse in"
+                         aria-expanded="true">{{ form_row(edit_form.thumbnail) }}</div>
+                    <div class="footer"></div>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="card">
+                    <div class="content">
+                        {{ form_rest(edit_form) }}
+                        <div class="clearfix"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
