--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
@@ -7,109 +7,72 @@
             <li class="active">Création</li>
         </ol>
     </div>
-{% for flashMessage in app.session.flashbag.get('error') %}
-    <div class="alert alert-callout alert-danger" role="alert">
-        {{ flashMessage|trans }}
-    </div>
-{% endfor %}
-{% for flashMessage in app.session.flashbag.get('success') %}
-    <div class="alert alert-callout alert-success" role="alert">
-        {{ flashMessage|trans }}
-    </div>
-{% endfor %}
-<div id="main-card" class="card">
-    <div class="header">
-        <h4 class="title pull-left">{{ 'cms.content.content' |trans }}</h4>
-        <div class="fixed-table-toolbar">
-            <div class="columns columns-right pull-right">
-                <a data-toggle="modal" href="#modal-taxonomy" class="btn btn-default"><i class="fa fa-plus"></i></a>
-            </div>
+    {% for flashMessage in app.session.flashbag.get('error') %}
+        <div class="alert alert-callout alert-danger" role="alert">
+            {{ flashMessage|trans }}
         </div>
-    </div>
-    <div class="modal fade" id="modal-taxonomy">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title">{{ 'cms.content.taxonomies'|trans }}</h4>
+    {% endfor %}
+    {% for flashMessage in app.session.flashbag.get('success') %}
+        <div class="alert alert-callout alert-success" role="alert">
+            {{ flashMessage|trans }}
+        </div>
+    {% endfor %}
+    <div id="main-card" class="card">
+        <div class="header">
+            <h4 class="title pull-left">{{ 'cms.content.content' |trans }}</h4>
+            <div class="fixed-table-toolbar">
+                <div class="columns columns-right pull-right">
+                    <a data-toggle="modal" href="#modal-taxonomy" class="btn btn-default"><i class="fa fa-plus"></i></a>
                 </div>
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label for="taxonomies" class="form-label"></label>
-                        <select name="contenttaxonomy" id="taxonomies" class="form-control" onchange="changeUrl(this)">
-                            <option value="">--</option>
-                            {% for taxonomy in taxonomies %}
-                            <option value="{{ taxonomy.alias }}">{{ taxonomy.title }}</option>
-                            {% endfor %}
-                        </select>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+        <div class="modal fade" id="modal-taxonomy">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title">{{ 'cms.content.taxonomies'|trans }}</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="taxonomies" class="form-label"></label>
+                            <select name="contenttaxonomy" id="taxonomies" class="form-control"
+                                    onchange="changeUrl(this)">
+                                <option value="">--</option>
+                                {% for taxonomy in taxonomies %}
+                                    <option value="{{ taxonomy.alias }}">{{ taxonomy.title }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-fill" data-dismiss="modal"
+                                aria-hidden="true">{{ 'Close'|trans }}</button>
+                        <a class="btn btn-info btn-fill">{{ 'New'|trans }}</a>
                     </div>
                 </div>
-                <div class="modal-footer">
-                    <button class="btn btn-fill" data-dismiss="modal" aria-hidden="true">{{ 'Close'|trans }}</button>
-                    <a class="btn btn-info btn-fill">{{ 'New'|trans }}</a>
+            </div>
+        </div>
+        <div class="content bootstrap-table clearfix">
+            <ul role="tablist" class="nav nav-tabs">
+                <li role="presentation" class="active">
+                    <a href="#published" data-toggle="tab"><i class="fa fa-file-o"></i> Contenus</a>
+                </li>
+                <li>
+                    <a href="#trashed" data-toggle="tab"><i class="fa fa-trash-o"></i> Corbeille</a>
+                </li>
+            </ul>
+            <div class="tab-content">
+                <div id="published" class="tab-pane active">
+                    {% include "ContentBundle:Content:table.html.twig" with {'entities': entities} %}
+                </div>
+                <div id="trashed" class="tab-pane">
+                    {% include "ContentBundle:Content:table.html.twig" with {'entities': entities_trashed} %}
                 </div>
             </div>
         </div>
     </div>
-    <div class="content bootstrap-table clearfix">
-         <table id="data_table" class="table table-striped table-hover" role="grid" aria-describedby="data_table">
-            <thead>
-                <tr>
-                    <th{% if entities.isSorted('c.id') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(entities, 'Id', 'c.id') }}</th>
-                    <th{% if entities.isSorted('c.title') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(entities, 'cms.content.title'|trans, 'c.title')|raw }}</th>
-                    <th>{{ 'cms.content.categories'|trans }}</th>
-                    <th>{% for language in languages %}<img src="{{ asset('bundles/core/images/flags/' ~ language.codelang ~ '.png') }}" />&nbsp;{% endfor %}</th>
-                    <th>{{ 'cms.content.author'|trans }}</th>
-                    <th{% if entities.isSorted('c.published') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(entities, 'cms.content.status'|trans, 'c.published') }}</th>
-                    <th>{{ 'cms.content.date'|trans }}</th>
-                    <th class="no-sort text-right">{{ 'cms.content.actions'|trans }}</th>
-                </tr>
-            </thead>
-            <tbody>
-            {% for entity in entities %}
-                <tr>
-                    <td>{{ entity.id }}</td>
-                    <td>{{ entity.title }}</td>
-                    <td>
-                        {{ entity.categories|join(', ') }}
-                    </td>
-                    <td>
-                        {% for language in languages %}
-                            {% if language.codelocal != entity.language.codelocal %}
-                                <a href="{{ path('admin_translation_new', {'content': entity.id, 'language': language.id }) }}">
-                                    <i class="fa fa-plus"></i>
-                                </a>&nbsp;
-                            {% else %}
-                                <i class="fa fa-check"></i>&nbsp;
-                            {% endif %}
-                        {% endfor %}
-                    </td>
-                    <td>{{ entity.author }}</td>
-                    <td>
-                        <div class="switch">
-                            <input type="checkbox" class="status" {% if entity.published %}checked="checked"{% endif %} data-id="{{ entity.id }}" data-repo="ContentBundle:Content" data-prop="published" onchange="changeProp(this)">
-                        </div>
-                    </td>
-                    <td>{% if entity.modified %}{{ entity.modified|date(date_format) }}{% endif %}</td>
-                    <td class="text-right">
-                        <a href="{{ path('admin_content_edit', { 'id': entity.id }) }}" class="btn btn-simple btn-info btn-xs" data-toggle="tooltip" data-placement="top" data-original-title="Editer">
-                            <i class="fa fa-pencil"></i>
-                        </a>
-                        <a data-toggle="modal" role="button" href='#modal-delete' class="btn btn-simple btn-danger btn-xs" rel="tooltip" data-placement="top" data-original-title="Supprimer" data-id="{{ entity.id }}">
-                            <i class="fa fa-trash-o"></i>
-                        </a>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-        <div class="fixed-table-pagination">
-            <div class="pull-right pagination">
-                {{ knp_pagination_render(entities) }}
-            </div>
-        </div>
-    </div>
-</div>
 
     <div class="modal fade" id="modal-delete" aria-labelledby="simpleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -122,28 +85,30 @@
                     {{ 'cms.content.modal.text_delete'|trans }}
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn ink-reaction btn-raised btn-default-bright" data-dismiss="modal"><i class="fa fa-close"></i> {{ 'cancel'|trans }}</button>
-                    <a href="" class="btn ink-reaction btn-raised btn-danger"><i class="fa fa-trash-o"></i> {{ 'delete'|trans }}</a>
+                    <button type="button" class="btn ink-reaction btn-raised btn-default-bright" data-dismiss="modal"><i
+                                class="fa fa-close"></i> {{ 'cancel'|trans }}</button>
+                    <a href="" class="btn ink-reaction btn-raised btn-danger"><i
+                                class="fa fa-trash-o"></i> {{ 'delete'|trans }}</a>
                 </div>
             </div>
         </div>
     </div>
 {% endblock %}
 {% block javascript %}
-<script type="text/javascript">
-function changeUrl(elem) {
-    var contenttaxonomy = $(elem).val();
-    var url = Routing.generate('admin_content_new', {'contenttaxonomy': contenttaxonomy});
-    $('#modal-taxonomy').find('.modal-footer > a').attr('href', url)
-}
+    <script type="text/javascript">
+        function changeUrl(elem) {
+            var contenttaxonomy = $(elem).val();
+            var url = Routing.generate('admin_content_new', {'contenttaxonomy': contenttaxonomy});
+            $('#modal-taxonomy').find('.modal-footer > a').attr('href', url)
+        }
 
 
-$('#modal-delete').on('show.bs.modal', function (event) {
-      var button = $(event.relatedTarget);
-      var id = button.data('id');
-      var path = Routing.generate('{{ url }}', {id: id});
-      var modal = $(this);
-      modal.find('.modal-footer > a.btn-danger').attr('href', path);
-})
-</script>
+        $('#modal-delete').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget);
+            var id = button.data('id');
+            var path = Routing.generate('{{ url }}', {id: id});
+            var modal = $(this);
+            modal.find('.modal-footer > a.btn-danger').attr('href', path);
+        })
+    </script>
 {% endblock javascript %}
