--- a/src/CMS/Bundle/CoreBundle/Resources/public/css/light-bootstrap-dashboard.css
+++ b/src/CMS/Bundle/CoreBundle/Resources/public/css/light-bootstrap-dashboard.css
@@ -1046,7 +1046,7 @@ svg {
 }
 
 .bootstrap-table .table,
-.bootstrap-table .table > tbody > tr > th,
+.bootstrap-table .table > thead > tr > th,
 .bootstrap-table .table > tfoot > tr > th,
 .bootstrap-table .table > thead > tr > td,
 .bootstrap-table .table > tbody > tr > td,
