--- a/src/CMS/Bundle/CoreBundle/Resources/views/Widget/search.html.twig
+++ b/src/CMS/Bundle/CoreBundle/Resources/views/Widget/search.html.twig
@@ -4,7 +4,7 @@
             <h4 class="widget-title">{{ title }}</h4>
         {% endif %}
         <form role="search" method="get" id="searchform" action="{{ path('front_search') }}">
-            <input type="text" placeholder="Rechercher..." name="q" id="q">
+            <input type="text" placeholder="Rechercher..." name="q" id="q" class="form-control">
         </form>
     </div>
 {% else %}
