--- a/web/templates/Breezy/style.css
+++ b/web/templates/Breezy/style.css
@@ -158,6 +158,7 @@ h2 {
     margin-top: 14px;
     font-size: 14px;
     color: #AAAAAA;
+    width: 100%;
 }
 
 .blurred {
@@ -632,6 +633,23 @@ body.search-open .search-form-area {
     }
 }
 
+.comment-like-container i, .masonry-item-footer i {
+    color: #AAAAAA;
+    vertical-align: middle;
+    font-size: 18px;
+    padding-right: 2px;
+    position: relative;
+    top: -1px;
+}
+
+.masonry-item-footer a:hover i {
+    color: #ED364D;
+}
+
+.comment-like-container a {
+    color: #000;
+    margin: 0 0 0 5px;
+}
 
 
 .post-featured-item {
@@ -722,6 +740,8 @@ body.search-open .search-form-area {
     margin-top: 1em;
     font-size: 14px;
 }
+
+
 
 .goto-top.on {
     opacity: 1;
@@ -820,13 +840,22 @@ body.search-open .search-form-area {
     margin: 0 auto;
 }
 
-.post-header h1:after, .post-header h2:after {
+.post-header h1:after, .post-header h2:after, .post-header .title:after {
     content: "";
     display: block;
     width: 30px;
     height: 1px;
     margin: 10px auto 0;
     background: #ed364d;
+}
+
+.post-header .title {
+    font-size: 15px;
+    margin: 0 0 15px;
+    padding-bottom: 6px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    text-align: center;
 }
 
 .masonry-item-footer {
@@ -872,6 +901,95 @@ body.search-open .search-form-area {
     color: #bd081c;
 }
 
+.comment {
+    border-bottom: 1px dotted #ddd;
+    padding-bottom: 40px;
+    margin-bottom: 40px;
+}
+
+.comment span.author {
+    display: block;
+    font-size: 17px;
+    font-weight: 600;
+    line-height: 1.3;
+}
+
+.comment span.date {
+    display: block;
+    font-size: 12px;
+    font-style: italic;
+    color: #AAA;
+    margin-bottom: 20px;
+}
+
+.comment-info {
+    width: 80%;
+}
+
+
+.comment-avatar {
+    width: 100px;
+    margin-right: 20px;
+}
+
+.comment-avatar img {
+    border-radius: 50%;
+}
+
+.comments {
+    padding: 0;
+}
+
+.comments button[type=submit] {
+    margin-top: 10px;
+    background-color: #ED364D;
+    color: #fff;
+    outline: none;
+}
+
+.comment-form {
+    margin: 0 -3%;
+    float: left;
+}
+
+.comment-form .col-md-6 {
+    float: left;
+    width: 47%;
+    margin-left: 3%;
+}
+.comment-form .col-md-12 {
+    float: left;
+    width: 97%;
+    margin-left: 3%;
+}
+
+.comment-form input, .comment-form textarea {
+    outline: #ED364D;
+}
+
+
+.comment-form textarea {
+    height: 120px;
+}
+
+.control-label {
+    display: block;
+    float: left;
+    width: 100%;
+    text-align: left;
+    font-size: 11px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-bottom: 7px;
+}
+
+.form-control {
+    display: block;
+    float: left;
+    margin-bottom: 10px;
+    width: 100%;
+}
+
 /*********************
  * Sidebar
  *********************/
@@ -880,7 +998,7 @@ body.search-open .search-form-area {
     width: 350px;
 }
 
-.widget {
+.widget, .comments {
     padding: 30px 30px;
     position: relative;
     margin-bottom: 30px;
@@ -894,6 +1012,10 @@ body.search-open .search-form-area {
     font-size: 14px;
     line-height: 1.6;
 }
+
+
+
+
 
 .widget-title {
     position: relative;
